# nova-gui-monitor

./: .gitignore  LICENSE  README.md  draw_mario.py  draw_peach.py  pyproject.toml  requirements.txt  send_reply.py  test_diag_input.py  test_mario.py  test_save_wechat_workflow.py  test_save_workflow.py  test_telegram.py  test_type_input.py  test_wechat.py  test_wechat_linda.py
.gitnexus/csv/: class.csv  community.csv  file.csv  folder.csv  function.csv  method.csv  process.csv  relations.csv  section.csv  variable.csv
chat_agent_data/workflows/: workflow_telegram_send_message.yaml  workflow_wechat_search_contact.yaml  workflow_wechat_send_message.yaml  workflow_wechat_send_message_stable.yaml
docs/: PRD.md  USAGE.md
gui_monitor/: __init__.py  __main__.py  chat_agent.py  cli.py  mcp_server.py  server.py
gui_monitor/core/: __init__.py  input.py  screen.py  window.py
gui_monitor/learning/: __init__.py  recipe.py
gui_monitor/utils/: __init__.py  clipboard.py  dpi.py
skills/app_workflow/: SKILL.md
